objects/BMCServiceDesk__SupportAssignments__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Support Assignments</relationshipLabel>
        <relationshipName>Support_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QueueId__c</fullName>
        <label>Queue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QueueName__c</fullName>
        <label>Queue</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__categoryId__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recordTypeName__c</fullName>
        <formula>IF(BMCServiceDesk__FKUser__c &lt;&gt; null, BMCServiceDesk__FKUser__r.Username,BMCServiceDesk__QueueName__c)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recordType__c</fullName>
        <formula>IF(BMCServiceDesk__QueueId__c &lt;&gt; null,  $Label.BMCServiceDesk__Queue, $Label.BMCServiceDesk__User)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__userId__c</fullName>
        <formula>BMCServiceDesk__FKUser__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff ID~</label>
        <type>Text</type>
    </fields>
</CustomObject>